# req_flow_agent

./: README.md  opencode.json  pyproject.toml
.opencode/skills/test-analyst/: SKILL.md
.opencode/skills/test-analyst/references/: specification-example.md  test-output-schema.md
.opencode/skills/test-developer/: SKILL.md
.opencode/skills/test-developer/references/: rf-mcp-tools.md  rf-patterns.md
specs/: saucedemo_login_and_cart_fs.md
