[project]
name = "req-flow-agent"
version = "0.1.0"
description = "AI-powered test automation workflow: from functional specifications to Robot Framework test scripts using OpenCode skills and rf-mcp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["robot-framework", "test-automation", "mcp", "opencode", "ai-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "robotframework>=7.0",
    "robotframework-browser>=18.0",
    "rf-mcp>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
